@@ -37,7 +37,7 @@ plugins {
 allprojects {
     group = Release.Group
     version = (System.getProperty("repo_version") ?: Release.Version) +
-            if (System.getProperty("snapshot") == "true") "-SNAPSHOT" else "-RELEASE"
+        if (System.getProperty("snapshot") == "true") "-SNAPSHOT" else "-RELEASE"
 
     apply(plugin = "com.tencent.devops.boot")
     apply(plugin = "jacoco")
@@ -46,9 +46,8 @@ allprojects {
         applyMavenExclusions(false)
 
         imports {
-            mavenBom("org.springframework.cloud:spring-cloud-sleuth-otel-dependencies:${Versions.SleuthOtel}")
             // 升级devops boot版本后，stream启动报错。参考https://github.com/spring-cloud/spring-cloud-function/issues/940
-            mavenBom("org.springframework.cloud:spring-cloud-function-dependencies:${Versions.SpringCloudFunction}")
+//            mavenBom("org.springframework.cloud:spring-cloud-function-dependencies:${Versions.SpringCloudFunction}")
         }
         dependencies {
             dependency("com.github.zafarkhaja:java-semver:${Versions.JavaSemver}")
@@ -80,6 +79,9 @@ allprojects {
             dependency("com.tencent.devops:devops-schedule-server:${Versions.DevopsBootSNAPSHOT}")
             dependency("com.tencent.devops:devops-schedule-model-mongodb:${Versions.DevopsBootSNAPSHOT}")
             dependency("com.tencent.devops:devops-schedule-worker:${Versions.DevopsBootSNAPSHOT}")
+            dependency("de.flapdoodle.embed:de.flapdoodle.embed.mongo.spring30x:${Versions.EmbeddedMongo}")
+            // pulsar-client中依赖的版本太旧，和otel trace中的版本冲突
+            dependency("io.opentelemetry:opentelemetry-api-incubator:1.43.0-alpha")
         }
     }
 
@@ -87,12 +89,13 @@ allprojects {
         exclude(group = "log4j", module = "log4j")
         exclude(group = "org.slf4j", module = "slf4j-log4j12")
         exclude(group = "commons-logging", module = "commons-logging")
+        exclude(group = "io.swagger")
         exclude(group = "org.springframework.boot", module = "spring-boot-starter-tomcat")
     }
 
     tasks.withType<org.jetbrains.kotlin.gradle.tasks.KotlinCompile> {
-        kotlinOptions {
-            freeCompilerArgs = listOf("-java-parameters")
+        compilerOptions {
+            freeCompilerArgs.set(listOf("-java-parameters"))
         }
     }
 
@@ -102,6 +105,10 @@ allprojects {
             html.required.set(true)
         }
         dependsOn(tasks.getByName("test"))
+    }
+
+    tasks.test {
+        jvmArgs = listOf("--add-opens=java.base/java.nio=ALL-UNNAMED")
     }
 
     if (isBootProject(this)) {
